fix: layout on small screens

--- a/src/modules/search-time/selector/selector.module.css
+++ b/src/modules/search-time/selector/selector.module.css
@@ -90,6 +90,7 @@
   overflow: hidden;
   background-color: var(--static-background-background_0-background);
   display: flex;
+  justify-content: space-between;
 }
 
 .dateSelector label,
@@ -120,7 +121,6 @@
   height: var(--height);
   padding: var(--spacings-medium);
   color: var(--static-background-background_0-text);
-  flex: 1;
   border-top-right-radius: 0.75rem;
   border-bottom-right-radius: 0.75rem;
   display: flex;
